# CreditRisk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.py  pyproject.toml  render.yaml  requirements.txt
frontend/: app.js  index.html  styles.css
models/: credit_risk_model.pkl
src/: config.py  logger.py  predict.py  preprocess.py  template.csv  template.py  train_model.py
tests/: test_api.py
